# tinicryptor

./: .gitignore  .gitmodules  README.md
app/cmd_app/tinicryptor/: CMakeLists.txt
app/cmd_app/tinicryptor/cmd_app/: cmd_app.vcxproj  cmd_app.vcxproj.filters  in.txt  out.txt
app/cmd_app/tinicryptor/cmd_app/headers/: decode.hpp  encode.hpp  huffman.hpp  util.hpp
app/cmd_app/tinicryptor/cmd_app/src/: cmd_app.cpp  decode.cpp  encode.cpp  huffman.cpp  util.cpp
app/cmd_app/tiniencryptor/: CMakeLists.txt  tiniencryptor.sln
app/cmd_app/tiniencryptor/cmd_app/: cmd_app.cpp  cmd_app.vcxproj  cmd_app.vcxproj.filters  huffman.cpp
app/cmd_app/tiniencryptor/cmd_app/headers/: HuffmanTree.hpp  decode.hpp  huffman.hpp  util.hpp
app/cmd_app/tiniencryptor/cmd_app/src/: cmd_app.cpp  encode.cpp  huffman.cpp  util.cpp
release/linux/: tinicryptor
release/mac/: tinicryptor
